# frate-test

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  config.yaml  push.yaml
.cache/clangd/index/: main.cpp.EEA0C402DFDEBC93.idx
CMakeTemplate/: CMakeLists.txt.gotmpl
Include/: Frate.hpp
src/: main.cpp
